# promptnotes-vcsdd

./: .envrc  .gitignore  AGENT.md  CLAUDE.md  DESIGN.md  README.md  flake.nix  lib  src-tauri
.beads/: metadata.json
.claude/: settings.json
.opencode/agents/: vcsdd-adversary.md  vcsdd-builder.md  vcsdd-orchestrator.md  vcsdd-verifier.md
.opencode/tests/: test-vcsdd-coherence.js
.serena/: project.yml
.vcsdd/: active-feature.txt  history.jsonl  index.json
.vcsdd/migration/: feature-impact.md
docs/: implement.md  vertical-slice-handoff.md
docs/domain/: .ddd-session.json  aggregates.md  bounded-contexts.md  context-map.md  discovery.md  domain-events.md  event-storming.md  glossary.md  ui-fields.md  validation.md  workflows.md
docs/tasks/: block-based-ui-spec-migration.md  block-migration-spec-impact.md  ipc-payload-rust-block-migration.md  sprint-ui-feed-list-actions-s3.md  type-contract-prompt.md  vcsdd-hook-module-not-found.md
promptnotes/: .gitignore  bunfig.toml  package-lock.json  package.json  vitest.config.ts
promptnotes/scripts/: sprint-5-grep-audit.sh
promptnotes/src-tauri/: Cargo.toml  tauri.conf.json
promptnotes/src-tauri/proptest-regressions/domain/vault/: note_id.txt
promptnotes/src-tauri/src/: editor.rs  feed.rs  lib.rs  main.rs
promptnotes/src-tauri/src/domain/: mod.rs
promptnotes/src-tauri/src/domain/vault/: mod.rs  note_id.rs
promptnotes/src-tauri/tests/: editor_handlers.rs  editor_wire_sprint8.rs  feed_handlers.rs  note_body_editor_handlers.rs  wire_audit.sh
promptnotes/src-tauri/tests/fixtures/: wire-fixtures.json
(+1464 files in other folders)
