[package]
name = "promptnotes"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "promptnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Domain type contracts (frozen by DDD Phase 10 / VCSDD spec phase).
# Path dependency keeps the contracts as the single source of truth;
# implementations live in this crate and import types from here.
promptnotes_domain = { path = "../../docs/domain/code/rust" }

[dev-dependencies]
# Property-based testing for VCSDD Tier 1 proof obligations
# (e.g., next_available_note_id purity / collision avoidance).
proptest = "1"
# Temporary directory creation for integration tests (Sprint 5 vault isolation).
tempfile = "3"
# Regular expression matching for NoteId format assertions (Sprint 5 PROP-FEED-S5-003).
regex = "1"

